@@ -10,9 +10,6 @@ public class Publisher {
         p.setMarshaller(Msg.class, new MsgMarshaller());
 
         DataWriter<Msg> dw = p.createDataWriter(Msg.class, new MsgQoS());
-
-        System.out.println("Press Enter to write samples");
-        System.in.read();
         
         for (int i = 0; i < 10; i++) {
             Msg m = new Msg(i, "message" + i);
